# maxbuy_ventures_erp

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Dockerfile  README.md  ROADMAP.md  Read.MD  capacitor.config.ts  docker-compose.yml  next.config.js  package-lock.json  package.json  progressreport.md  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
docs/: BACKUP.md  DEPLOY.md  HANDOVER.md  LAUNCH-CHECKLIST.md  PACKAGING.md  UAT-SIGNOFF.md
nginx/: nginx.conf
prisma/: schema.prisma  seed.ts
public/: manifest.webmanifest  sw.js
public/.well-known/: assetlinks.json
scripts/: backup.sh  docker-entrypoint.sh  restore.sh
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/(dashboard)/: layout.tsx
src/app/forgot-password/: page.tsx
src/app/login/: page.tsx
src/app/offline/: page.tsx
src/components/inventory/: ProductFormModal.tsx
src/components/layout/: MobileBottomNav.tsx  Sidebar.tsx  Topbar.tsx
src/components/pos/: ReceiptModal.tsx
src/components/pwa/: InstallPrompt.tsx  OfflineBanner.tsx  ServiceWorkerRegistrar.tsx
src/components/ui/: Card.tsx  StatCard.tsx  (+1 more)
src/lib/: apiAuth.ts  apiClient.ts  audit.ts  auth.test.ts  auth.ts  authCookies.ts  branch.test.ts  branch.ts  insights.test.ts  insights.ts  invoice.ts  nav.test.ts  nav.ts  notify.ts  otp.test.ts  otp.ts  permissions.ts  rateLimit.test.ts  rateLimit.ts  session.ts  utils.ts
src/store/: authStore.ts  cartStore.ts
src/types/: index.ts
(+53 files in other folders)
