[package]
name = "maxbuy-ventures"
version = "1.0.0"
description = "Maxbuy Ventures ERP/POS desktop app"
authors = ["Maxbuy Ventures"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
